[#B-16] 판매자, 구매자 주문내역 구분, 상품 상태 변경 코드 추가
- CORS 수정
- Enum 컨버터(OrderStatusConverter) 생성